test/parser/block-comment-nested-unterminated.cx
// RUN: %not %cx -parse %s | %FileCheck %s

// CHECK: [[@LINE+1]]:1: error: unterminated block comment
/*
/*
*/
